fix done lib sonars

--- a/Robot_mecanum_teensy/platformio.ini
+++ b/Robot_mecanum_teensy/platformio.ini
@@ -17,5 +17,4 @@ lib_deps =
 	adafruit/Adafruit NeoPixel@^1.12.0
 	ftrias/TeensyThreads@^1.0.2
 	waspinator/AccelStepper@^1.64
-	johboh/nlohmann-json@^3.11.3
-	teckel12/NewPing@^1.9.7
+	ericksimoes/Ultrasonic@^3.0.0
