add motor done (debugging)

--- a/Robot_mecanum_teensy/platformio.ini
+++ b/Robot_mecanum_teensy/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	ftrias/TeensyThreads@^1.0.2
 	waspinator/AccelStepper@^1.64
 	ericksimoes/Ultrasonic@^3.0.0
+	arduino-libraries/Stepper@^1.1.3
