--- a/Robot_mecanum_teensy/platformio.ini
+++ b/Robot_mecanum_teensy/platformio.ini
@@ -12,6 +12,7 @@
 platform = teensy
 board = teensy41
 framework = arduino
+; upload_port = /dev/ttyACM0
 lib_deps = 
 	frankjoshua/Rosserial Arduino Library@^0.9.1
 	adafruit/Adafruit NeoPixel@^1.12.0
