--- a/Robot_mecanum_teensy/.vscode/settings.json
+++ b/Robot_mecanum_teensy/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "stm32-for-vscode.openOCDPath": false,
-    "stm32-for-vscode.makePath": false,
+    "stm32-for-vscode.makePath": "/usr/bin/make",
     "stm32-for-vscode.armToolchainPath": false,
     "C_Cpp.errorSquiggles": "disabled"
 }
